test-cases/negative/type_001_undefined_variable.lay
# negative test case: undefined variable usage
# expected error: Variable 'undefined_var' is not defined
# description: Tests that undefined variables are caught

print the variable undefined_var


